cmake_minimum_required (VERSION 3.0)
project (allocator VERSION 1.0.$ENV{TRAVIS_BUILD_NUMBER})

SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Aleksei Zakharov")
SET(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

add_executable(allocator allocator.cpp)
INSTALL(TARGETS allocator RUNTIME DESTINATION bin)
INCLUDE(CPack)
